fpp_analysis/src/test/redef/enum_module.ref.txt
error: duplicate symbol definition
 --> [ local path prefix ]/redef/enum_module.fpp:2:8
  |
2 | module E { }
  |        ^ redefinition of symbol E
  |
 ::: [ local path prefix ]/redef/enum_module.fpp:1:6
  |
1 | enum E { X }
  |      - previous definition is here

